# yellowpages_scraper

./: .gitignore  DEVELOPER_NOTES.txt  LICENSE  README.md  pyproject.toml
yellowpages_scraper/src/: scraper.py
